k8s/manifests/apps/homepage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    gateway.infra.services/allow-routes: "true"
