k8s/manifests/apps/homepage/homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      hostUsers: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.5.0
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: 300Mi
          volumeMounts:
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            # These aren't used but we need them to avoid read only errors
            - mountPath: /app/config/docker.yaml
              name: homepage-config
              subPath: empty-file
            - mountPath: /app/config/proxmox.yaml
              name: homepage-config
              subPath: empty-file
            - mountPath: /app/config/custom.css
              name: homepage-config
              subPath: empty-file
            - mountPath: /app/config/custom.js
              name: homepage-config
              subPath: empty-file
            - mountPath: /app/config/logs
              name: logs
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir:
            sizeLimit: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      appProtocol: http
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  labels:
    external-dns: "true"
  annotations:
    gethomepage.dev/enabled: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: services
      namespace: infra
      sectionName: "main"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 80
          weight: 1
